--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/vue-3": "^2.4.0",
     "animejs": "^3.2.2",
+    "p5": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.112",
     "@types/animejs": "^3.1.12",
+    "@types/p5": "^1.7.6",
     "@unocss/transformer-compile-class": "^0.60.3",
     "@unocss/transformer-directives": "^0.60.3",
     "@vitejs/plugin-vue": "^5.0.4",
