--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@antv/g6": "^4.8.24",
+    "@antv/g6": "^5.0.1",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/vue-3": "^2.4.0",
     "animejs": "^3.2.2",
+    "element-plus": "^2.7.5",
     "p5": "^1.9.4",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue": "^3.4.29",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "@iconify-json/tabler": "^1.1.112",
+    "@iconify-json/tabler": "^1.1.113",
     "@types/animejs": "^3.1.12",
     "@types/p5": "^1.7.6",
-    "@unocss/transformer-compile-class": "^0.60.3",
-    "@unocss/transformer-directives": "^0.60.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "sass": "^1.77.2",
-    "unocss": "^0.60.3",
+    "@unocss/transformer-compile-class": "^0.61.0",
+    "@unocss/transformer-directives": "^0.61.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.77.6",
+    "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.2.8",
-    "vite-plugin-pages": "^0.32.1"
+    "vite": "^5.3.1",
+    "vite-plugin-pages": "^0.32.2"
   },
-  "packageManager": "pnpm@9.1.1"
+  "packageManager": "pnpm@9.1.4"
 }
