--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@antv/g6": "^5.0.1",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/language": "^6.10.2",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@lezer/highlight": "^1.2.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/vue-3": "^2.4.0",
+    "@vueuse/core": "^10.11.0",
     "animejs": "^3.2.2",
+    "codemirror": "^6.0.1",
     "element-plus": "^2.7.5",
+    "nord": "^0.2.1",
     "p5": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
