--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1",
+    "vite-plugin-cdn-import": "^1.0.1",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-pages": "^0.32.2"
   },
   "packageManager": "pnpm@9.1.4"
